@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<GLBASIC APP_NAME="Arkanoid" COMPANY_NAME="programming with design" CONSOLE_PRG="0" DEBUG="0" DEBUGFULL="0" EDITFILE=".\Arkanoid.gbas" EDITLINE="7" MAXDIMDEBUG="20" PLATFORM_BOX_SELECTION="WIN32" STRICT="0" USERDEF_VERSION="000.001" VERSION="6.003" >
+<GLBASIC APP_NAME="Arkanoid" COMPANY_NAME="programming with design" CONSOLE_PRG="0" DEBUG="0" DEBUGFULL="0" EDITFILE=".\Arkanoid.gbas" EDITLINE="84" MAXDIMDEBUG="20" PLATFORM_BOX_SELECTION="WIN32" STRICT="0" USERDEF_VERSION="000.001" VERSION="6.003" >
    <PLATFORMS >
       <PLATFORM ACTIVE="0" FRAMERATE="60" FULLSCREEN="1" MULTISAMPLE="0" NAME="LINUX" RESX="1024" RESY="768" />
       <PLATFORM ACTIVE="1" FRAMERATE="-1" FULLSCREEN="0" MULTISAMPLE="0" NAME="WIN32" RESX="640" RESY="480" />
